--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+            	<groupId>org.jboss.migr.as</groupId>
+            	<artifactId>WindRide-engine</artifactId>
+            	<version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>    
 
